--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sweetalert2": "^11.6.16",
     "util": "^0.12.4",
     "wagmi": "~0.9.0"
   },
